@@ -159,9 +159,11 @@ Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "AllOverIt.Csv", "AllOverIt.
 EndProject
 Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "CsvExport", "Demos\AllOverIt.Csv\CsvExport\CsvExport.csproj", "{1A82062D-B06B-45C0-8100-3BB62A579973}"
 EndProject
-Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "PropertyNavigation", "Demos\AllOverIt\Helpers\PropertyNavigation\PropertyNavigation.csproj", "{7BBD8B1A-3D74-4F36-BF0E-5B2E5AA133CD}"
+Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "PropertyNavigation", "Demos\AllOverIt\Helpers\PropertyNavigation\PropertyNavigation.csproj", "{7BBD8B1A-3D74-4F36-BF0E-5B2E5AA133CD}"
 EndProject
 Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Helpers", "Helpers", "{643B62BB-CF51-4D34-B899-636273B91123}"
+EndProject
+Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "AllOverIt.Reactive", "Source\AllOverIt.Reactive\AllOverIt.Reactive.csproj", "{DADCB028-A3B4-4C1D-BBCF-849C2FE99030}"
 EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
@@ -381,6 +383,10 @@ Global
 		{7BBD8B1A-3D74-4F36-BF0E-5B2E5AA133CD}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{7BBD8B1A-3D74-4F36-BF0E-5B2E5AA133CD}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{7BBD8B1A-3D74-4F36-BF0E-5B2E5AA133CD}.Release|Any CPU.Build.0 = Release|Any CPU
+		{DADCB028-A3B4-4C1D-BBCF-849C2FE99030}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{DADCB028-A3B4-4C1D-BBCF-849C2FE99030}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{DADCB028-A3B4-4C1D-BBCF-849C2FE99030}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{DADCB028-A3B4-4C1D-BBCF-849C2FE99030}.Release|Any CPU.Build.0 = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
@@ -459,6 +465,7 @@ Global
 		{1A82062D-B06B-45C0-8100-3BB62A579973} = {CE8FDC96-11E9-4FA9-9F9D-351738D817D4}
 		{7BBD8B1A-3D74-4F36-BF0E-5B2E5AA133CD} = {643B62BB-CF51-4D34-B899-636273B91123}
 		{643B62BB-CF51-4D34-B899-636273B91123} = {0DC79E13-DE7A-417D-8A7B-64ABA3F4E1C8}
+		{DADCB028-A3B4-4C1D-BBCF-849C2FE99030} = {FC8E8DB2-1299-44F4-A233-0EDCE225BB8C}
 	EndGlobalSection
 	GlobalSection(ExtensibilityGlobals) = postSolution
 		SolutionGuid = {19DD11B3-596E-4862-B5C4-1FFFFB173106}
