@@ -17,6 +17,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\AllOverIt.Reactive\AllOverIt.Reactive.csproj" />
         <ProjectReference Include="..\AllOverIt.Serialization.Abstractions\AllOverIt.Serialization.Abstractions.csproj" />
         <ProjectReference Include="..\AllOverIt\AllOverIt.csproj" />
     </ItemGroup>
